--- a/Report.Rmd
+++ b/Report.Rmd
@@ -3,6 +3,24 @@ output:
   html_document: default
   pdf_document: default
 ---
+```{r setup, include=FALSE, echo=FALSE}
+r <- getOption("repos")
+r["CRAN"] <- "http://cran.cnr.berkeley.edu/"
+options(repos = r)
+
+if(!require(e1071)){
+  install.packages("e1071")
+}
+
+if(!require(ggplot2)){
+  install.packages("ggplot2")
+}
+
+library("e1071")
+library("ggplot2")
+
+```
+
 # Group Assignment - Data Driven Security
 
 Group Assignment base repository for the Data Driven Security subject of the [CyberSecurity Management Msc](https://www.talent.upc.edu/ing/professionals/presentacio/codi/221101/cybersecurity-management/).
@@ -34,7 +52,7 @@ Las columnas correspondientes son: `n_defined_packages`, `n_referenced_packages`
 Finalmente, tambien tenemos el campo `max_depth` que indica la profundidad máxima de un objeto en el árbol de código, lo que nos puede indicar en cierta manera la complejidad de la aplicación.
 
 ### Limpieza y transformaciones
-```{r include=FALSE}
+```{r include=FALSE,warning=FALSE,message=FALSE}
 source('code.R')
 
 apks <- read_and_clean_apk_data()
